fixed extra spaces by adding justifycontent space betweeon

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ button{
 .all-meals{
      display: flex;
      flex-wrap: wrap;
+     justify-content: space-between;
 }
 
 .show-meal {
@@ -44,7 +45,7 @@ button{
   flex-direction: column;
   align-items: center;
   gap: 1rem;
-  overflow: hidden; /* Prevent outer scroll unless needed */
+  overflow: hidden;
   padding: 1rem;
   box-sizing: border-box;
   background-color: aquamarine;
